--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,11 @@
-body{position:relative;padding-top:90px;font-family:'Dosis',sans-serif}
+body{position:relative;padding-top:30px;font-family:'Dosis',sans-serif}
 h1,h2,h3{font-family:'Cabin',sans-serif}
 .clickable{cursor:pointer}
 #mealPlan{margin-left:0;}
 #mealPlan li{display:inline;list-style:none;text-align:center;}
 #mealPlan li div{display:inline-block;width:50%;}
-#mealPlan li div .meal,#mealPlan li div .day{text-decoration:underline}
+#mealPlan li div .day{text-decoration:underline}
 #mealPlan li:last-child div{width:100%}
 .next-week{text-align:right}
+@media (max-width: 767px){#container .modal.fade.in{top:5%}
+}
